--- a/apps/03_products_catalog/pubspec.yaml
+++ b/apps/03_products_catalog/pubspec.yaml
@@ -26,8 +26,8 @@ dependencies:
   magazord_logger:
     path: ./packages/logger
   mmkv: ^1.3.3
+  motion_toast: ^2.8.0
   nested: ^1.0.0
-  share_plus: ^7.2.2
   url_launcher: ^6.2.5
 
 dev_dependencies:
